  * Using .bzr-builddeb/local.conf is now deprected, please move the contents
    to .bzr/branch/branch.conf. The local.conf file will not be read in the
    next version.
  * python-deb822 changed from new classes to old classes in version 0.3.
    Handle the change in API, and bump the dependencies to make sure it will
    work.
  * Fix up Build-Depends and Build-Depends-Indep (thanks lintian).

 -- James Westby <jw+debian@jameswestby.net>  Mon, 18 Jun 2007 22:50:07 +0100

bzr-builddeb (0.16.2) unstable; urgency=low

  * loosen the dependency on bzr. bzr-builddeb seems to be not be broken
    by bzr version 0.17, so remove the upper bound of the dependency.

 -- Reinhard Tartler <siretart@tauware.de>  Tue, 12 Jun 2007 19:45:38 +0100

bzr-builddeb (0.16.1) unstable; urgency=low

  * fix FTBFS by correcting build depends. Thanks to
    "Rob Weir" <rob@weir.id.au> for providing the patch! (Closes: #423745)

 -- Reinhard Tartler <siretart@tauware.de>  Mon, 14 May 2007 14:08:11 +0200

bzr-builddeb (0.16) unstable; urgency=low

  [James Westby]
  * Lock the working trees to fix compatibility with 0.15+ dirstate trees.
    (Closes: #421900)
  * Add the start of a test suite to help avoid bugs like that.
  * Update the dependency on bzr to reflect the compatibility of this release.
    (Closes: #421041)
  * Take the package under the wing of pkg-bazaar.

  [Reinhard Tartler]
  * apply patch to util.py as suggested by Robert Collins: Use Tree
    directly, don't use the inventory.
  * upload to unstable

 -- Reinhard Tartler <siretart@tauware.de>  Tue,  8 May 2007 18:43:19 +0200

bzr-builddeb (0.15~rc1ubuntu1) gutsy; urgency=low

  * loosen depends, 0.15 works with bzr 0.16 as well

 -- Reinhard Tartler <siretart@tauware.de>  Tue,  1 May 2007 16:17:06 +0200

bzr-builddeb (0.15~rc1) feisty; urgency=low
  
  * Version designed to work with bzr 0.15.
  * Bump depends on bzr appropriately.
  * Install the plugin in .../plugins/builddeb instead of